added lists, fixed indents

--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -35,29 +35,33 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>Nothing so far! Please suggest resources if you have any.</p>
+							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>1. <strong>Wretched of the Earth</strong></p>
+							<ol>
+								<li><h4>Wretched of the Earth</h4>
      							<p>- Frantz Fanon, 316 pages.</p>
-     							<p><a href="https://archive.org/embed/thewretchedoftheearth">Text</a> | Audio Not Available</p>
-     							<p>2. <strong>How Europe Underdeveloped Africa</strong></p>
+								<p><a href="https://archive.org/embed/thewretchedoftheearth">Text</a> | Audio Not Available</p></li>
+								<li><h4>How Europe Underdeveloped Africa</h4>
      							<p>- Walter Rodney, 453 pages.</p>
-         						<p><a href="https://archive.org/details/BooksBagHowEuropeUnderdevelopedAfricaByWalterRodney">Text</a> | Audio Not Available</p>
-								<p>3. <strong>A Dying Colonialism</strong></p>
+								<p><a href="https://archive.org/details/BooksBagHowEuropeUnderdevelopedAfricaByWalterRodney">Text</a> | Audio Not Available</p></li>
+								<li><h4>A Dying Colonialism</h4>
      							<p>- Frantz Fanon, 92 pages</p>
-     							<p><a href="https://library.memoryoftheworld.org/#/book/087d061e-5758-4bf2-be8a-662efc396508">Text</a> | Audio Not Available</p>
+								<p><a href="https://library.memoryoftheworld.org/#/book/087d061e-5758-4bf2-be8a-662efc396508">Text</a> | Audio Not Available</p></li>
+							</ol>
 						</div>
 					</div>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-								<p>1. <strong>How Race Was Invented</strong></p>
+							<ol>
+								<li><h4>How Race Was Invented</h4>
 								<p>- BadEmpanada, 62 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=q7sxTnWeQ8s">Youtube</a></p>
+								<p><a href "https://www.youtube.com/watch?v=q7sxTnWeQ8s">Youtube</a></p></li>
+							</ol>
 						</div>
 					</div>
 				</div>
@@ -69,35 +73,39 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>Nothing so far! Please suggest resources if you have any.</p>
+     						<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>1. <strong>Imperialism: The Highest Stage of Capitalism</strong></p>
+							<ol>
+     							<li><h4>Imperialism: The Highest Stage of Capitalism</h4>
      							<p>- V.L Lenin, 95 pages.</p>
-     							<p><a href="https://www.marxists.org/archive/lenin/works/1916/imp-hsc/index.htm">Text</a> | Audio Not Available</p>
-     							<p>2. <strong>Imperialism and Unequal Development</strong></p>
+     							<p><a href="https://www.marxists.org/archive/lenin/works/1916/imp-hsc/index.htm">Text</a> | Audio Not Available</p></li>
+     							<li><h4>Imperialism and Unequal Development</h4>
      							<p>- Samir Amin, 146 pages.</p>
-     							<p><a href="https://library.memoryoftheworld.org/#/book/3e75acc6-da0d-4df9-a76f-ab41f7686e6d">Text</a> | Audio Not Available</p>
-     							<p>3. <strong>Unequal Development: A Study on the Imperialism of Trade</strong></p>
+     							<p><a href="https://library.memoryoftheworld.org/#/book/3e75acc6-da0d-4df9-a76f-ab41f7686e6d">Text</a> | Audio Not Available</p></li>
+     							<li><h4>Unequal Development: A Study on the Imperialism of Trade</h4>
      							<p>- Arghiri Emmanuel, 496 pages.</p>
-     							<p><a href="https://library.memoryoftheworld.org/#/book/746a6e18-b911-4680-be16-d64366a5f703">Text</a> | Audio Not Available</p>
+     							<p><a href="https://library.memoryoftheworld.org/#/book/746a6e18-b911-4680-be16-d64366a5f703">Text</a> | Audio Not Available</p></li>
+							</ol>
 						</div>
 					</div>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-								<p>1. <strong>How Rich Countries Rob The Poor</strong></p>
+							<ol>
+								<li><h4>How Rich Countries Rob The Poor</h4>
 								<p>- Hakim, 18 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=4lDZaKjfs4E">Youtube</a></p>
-								<p>2. <strong>What is Capitalist Imperialism?</strong></p>
+								<p><a href "https://www.youtube.com/watch?v=4lDZaKjfs4E">Youtube</a></p></li>
+								<li><h4>What is Capitalist Imperialism?</h4>
 								<p>- Marxist Paul, 14 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=NrpLPs2FcF8">Youtube</a></p>
-								<p>3. <strong>Michael Parenti Lecture on Imperialism</strong></p>
+								<p><a href "https://www.youtube.com/watch?v=NrpLPs2FcF8">Youtube</a></p></li>
+								<li><h4>Michael Parenti Lecture on Imperialism</h4>
 								<p>- Michael Parenti, 93 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=xP8CzlFhc14">Youtube</a></p>
+								<p><a href "https://www.youtube.com/watch?v=xP8CzlFhc14">Youtube</a></p></li>
+							</ol>
 						</div>
 					</div>
 				</div>
@@ -109,13 +117,13 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>Nothing so far! Please suggest resources if you have any.</p>
+							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>Nothing so far! Please suggest resources if you have any.</p>
+							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
@@ -133,18 +141,20 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>Nothing so far! Please suggest resources if you have any.</p>
+							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>1. <strong>On the National Question</strong></p>
+							<ol>
+     							<li><h4>On the National Question</h4>
      							<p>- Ibrahim Kaypakkaya, 144 pages.</p>
-     							<p><a href="https://foreignlanguages.press/colorful-classics/on-the-national-question-ibrahim-kaypakkaya/">Text</a> | Audio Not Available</p>
-     							<p>2. <strong> The Right of Nations to Self Determination</strong></p>
+     							<p><a href="https://foreignlanguages.press/colorful-classics/on-the-national-question-ibrahim-kaypakkaya/">Text</a> | Audio Not Available</p></li>
+     							<li><h4>The Right of Nations to Self Determination</h4>
      							<p>- V.L Lenin, ? pages.</p>
-     							<p><a href="https://www.marxists.org/archive/lenin/works/1914/self-det/index.htm">Text</a> | Audio Not Available</p>
+     							<p><a href="https://www.marxists.org/archive/lenin/works/1914/self-det/index.htm">Text</a> | Audio Not Available</p></li>
+							</ol>
 						</div>
 					</div>
 					<div class="hidden">
@@ -162,15 +172,17 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>Nothing so far! Please suggest resources if you have any.</p>
+							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     							<p>1. <strong>Red Skin, White Masks</strong></p>
+							<ol>
+     							<li><h4>Red Skin, White Masks</h4>
      							<p>- Glen Sean Coulthard, 245 pages.</p>
-     							<p><a href="https://libgen.is/book/index.php?md5=B22F728E5F822A7204D0994E7BCD8DE4">Text</a> | Audio Not Available</p>
+     							<p><a href="https://libgen.is/book/index.php?md5=B22F728E5F822A7204D0994E7BCD8DE4">Text</a> | Audio Not Available</p></li>
+							</ol>
 						</div>
 					</div>
 					<div class="hidden">
