--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -28,6 +28,18 @@
 		<div class="container">
       		<p>This guide provides resources on the topics of colonialism, imperialism and nationhood.</p>
       		<p>Each section shall have at least three resources each when complete, three books, three articles or pamphlets and three videos.</p>
+			<!-- Sub category template
+			<div class="hidden">
+				<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+					<ol>
+						<li><h4>Title</h4>
+						<p>- Author, Page count or time count</p>
+						<p><a href="">Text</a> | Audio</p></li>
+					</ol>
+				</div>
+			</div>
+			-->
 			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Colonialism <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
