--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -85,7 +85,10 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-     						<p>Nothing so far! Please suggest resources if you have any.</p>
+							<ol>
+								<li><h4>Red Theory: Imperialism, or Monopoly Capitalism</h4>
+								<p><a href="https://www.fightbacknews.org/2022/9/4/red-theory-imperialism-or-monopoly-capitalism">Original</a> | <a href="https://web.archive.org/web/20220906213601/https://www.fightbacknews.org/2022/9/4/red-theory-imperialism-or-monopoly-capitalism">Archive.org</a></p></li>
+							</ol>								
 						</div>
 					</div>
 					<div class="hidden">
