--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -88,6 +88,8 @@
 							<ol>
 								<li><h4>Red Theory: Imperialism, or Monopoly Capitalism</h4>
 								<p><a href="https://www.fightbacknews.org/2022/9/4/red-theory-imperialism-or-monopoly-capitalism">Original</a> | <a href="https://web.archive.org/web/20220906213601/https://www.fightbacknews.org/2022/9/4/red-theory-imperialism-or-monopoly-capitalism">Archive.org</a></p></li>
+								<li><h4>Red Theory: What is Neo-Colonialism?</h4>
+								<p><a href="https://www.fightbacknews.org/2022/9/18/red-theory-what-neo-colonialism">Original</a> | <a href="https://web.archive.org/web/20220929085631/http://www.fightbacknews.org/2022/9/18/red-theory-what-neo-colonialism">Archive.org</a></p></li>
 							</ol>								
 						</div>
 					</div>
@@ -187,6 +189,10 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
+							<ol>
+								<li><h4>Settler Colonialism and the Elimination of the Native</h4>
+								<p><a href="http://gooriweb.org/genocide/89.pdf">PDF</a> | Archive Unavailable</p></li>
+							</ol>
 							<p>Nothing so far! Please suggest resources if you have any.</p>
 						</div>
 					</div>
