Updated Feminism and Gender page

--- a/pages/guides/feminism_gender.html
+++ b/pages/guides/feminism_gender.html
@@ -1,9 +1,143 @@
-https://www.marxists.org/archive/gandhy/2006/philosophical-trends-in-feminist-movement-2nd-printing.pdf
-
-https://archive.org/details/WomenRaceClassAngelaDavis
-
-https://www.youtube.com/watch?v=bzQkVfO9ToQ
-
-https://archive.org/details/transliberationb0000fein
-
-https://www.youtube.com/watch?v=PFlGeTXLkVQ
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/x-icon" href="/assets/icon.ico">
+        <title>Feminism and Gender</title>
+        <meta content="The People's Land of Learning" property="og:title"/>
+        <meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
+        <meta content="https://peopleslandoflearning.github.io/pages/resources/orgs" property="og:url"/>
+        <meta content="/assets/icon.png" property="og:image"/>
+        <meta content="#ab5675" data-react-helmet="true" name="theme-color"/>
+        <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+        <script src="/script.js"></script>
+    </head>
+    <body>
+        <header>
+			<a href="/" id="title"><h1>The People's Land of Learning</h1></a>
+			<p>An educational resource for Anti-Colonial Marxist Leninist and Feminist theory.</p>
+			<div id="buttonMenu">
+				<a class="button" href="/pages/dictionary"><p>DICTIONARY</p></a>
+				<a class="button" href="/pages/contact"><p>FEEDBACK</p></a>
+				<a class="button" href="/pages/library/index"><p>LIBRARY</p></a>
+				<a class="button" href="/pages/resources/index"><p>RESOURCES</p></a>
+			</div>
+			<hr/>
+		</header>
+		<div class="container">
+		<p>This Guide covers the topics of patriarchy, gender and queerness from a marxist framework.</p>
+		<p>Each section shall have at least three resources each when complete, three books, three articles or pamphlets and three videos.</p>
+		<div class="hidden">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Feminism Overview <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+     					<p></p>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<ol>
+								<li><h4>Philosophical Trends in the Feminist Movement</h4>
+     							<p>- Anuradha Ghandy, 112 pages.</p>
+								<p><a href="https://www.marxists.org/archive/gandhy/2006/philosophical-trends-in-feminist-movement-2nd-printing.pdf">Text</a> | Audio Not Available</p></li>
+								<li><h4>Women Race and Class</h4>
+     							<p>- Angela Davis, 166 pages.</p>
+								<p><a href="https://archive.org/details/WomenRaceClassAngelaDavis">Text</a> | Audio Not Available</p></li>
+							</ol>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<ol>
+								<li><h4>Angela Davis Criticizes "Mainstream Feminism" / Bourgeois Feminism</h4>
+								<p>- AfroMarxist, 8 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=bzQkVfO9ToQ">Youtube</a></p></li>
+							</ol>
+						</div>
+					</div>
+				</div>
+				<div class="hidden">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Gender <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+     					<p></p>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+				</div>
+				<div class="hidden">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Patriarchy <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+     					<p></p>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+				</div>
+<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Queerness <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+     					<p></p>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<ol>
+								<li><h4>Trans Liberation: Beyond Pink or Blue</h4>
+     							<p>- Leslie Feinberg, 168 pages.</p>
+								<p><a href="https://archive.org/details/transliberationb0000fein">Text</a> | Audio Not Available</p></li>
+							</ol>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<ol>
+								<li><h4>Trans Liberation & Marxism: Is Gender Identity Actually Anti-Materialist?</h4>
+								<p>- Marxist Paul, 31 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=PFlGeTXLkVQ">Youtube</a></p></li>
+							</ol>
+						</div>
+					</div>
+				</div>
+			</div>
+    </body>
+</html>
