--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 			<div class="textGroup">
 				<h3>Theory Guides</h3>
 				<a href="/pages/guides/colonialism"><p>Colonialism and Imperialism</p></a>
-				<a href="/pages/guides/feminism"><p>Feminism and Gender Liberation</p></a>
-				<a href="/pages/guides/marxism"><p>Introductory Marxist Theory</p></a>
+				<a href="/pages/guides/disability_neurodivergence"><p>Disability and Neurodivergence</p></a>
+				<a href="/pages/guides/feminism_gender"><p>Feminism and Gender Liberation</p></a>
+				<a href="/pages/guides/base_theory"><p>Introductory Marxist Theory</p></a>
 				<a href="/pages/guides/organizing"><p>Organizing</p></a>
 				<a href="/pages/guides/security"><p>Security</p></a>
 			</div>
