--- a/pages/guides/base_theory.html
+++ b/pages/guides/base_theory.html
@@ -1,41 +1,205 @@
-https://foreignlanguages.press/colorful-classics/basic-principles-of-marxism-leninism-a-primer-jose-maria-sison/
-
-https://archive.org/details/PrinciplesOfCommunism
-
-https://www.youtube.com/watch?v=GhRJCe6aGag
-
-https://www.youtube.com/watch?v=gAkIwHOSmI4
-
-https://www.youtube.com/watch?v=N52bJRe0Gg8&list=PL0J754r0IteXABJntjBg1YuNsn6jItWXQ
-
-https://www.marxists.org/archive/marx/works/1867-c1/index.htm
-
-https://archive.org/details/wagelaborcapital00marx
-
-https://www.youtube.com/watch?v=yxDpF3XqpV4&list=PLUVllNXk1GCpkzSmJHCSXqJE9JGIfS1dU
-
-https://www.youtube.com/watch?v=SEGGvVinUao
-
-https://www.youtube.com/watch?v=Qke6FcIvfhU
-
-https://archive.org/details/WhatIsDialecticalMaterialismO.Yakhot
-
-https://archive.org/details/ShirokovM.ATextbookOfMarxistPhilosophy/mode/2up?view=theater&ui=embed&wrapper=false
-
-https://archive.org/details/DialecticalMaterialismMarxEngelsLenin/mode/2up
-
-https://youtu.be/neI-ol2AowM
-
-https://www.youtube.com/watch?v=hYNOrTE2BdQ
-
-https://www.youtube.com/watch?v=GNHzVeC7jeY
-
-https://archive.org/details/in.ernet.dli.2015.131494
-
-https://archive.org/details/socialismutopia00engegoog/page/n6/mode/2up
-
-https://www.youtube.com/watch?v=lVWwwfcQ5FA
-
-https://www.youtube.com/watch?v=iDeZpx3cnU4
-
-https://www.youtube.com/watch?v=gR3igiwaeyc
+<!DOCTYPE html>
+<html>
+ 	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="icon" type="image/x-icon" href="/assets/icon.ico">
+		<title>Foundational Marxism</title>
+		<meta content="The People's Land of Learning" property="og:title"/>
+		<meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
+		<meta content="https://peopleslandoflearning.github.io/pages/resources/orgs" property="og:url"/>
+		<meta content="/assets/icon.png" property="og:image"/>
+		<meta content="#ab5675" data-react-helmet="true" name="theme-color"/>
+		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
+		<script src="/script.js"></script>
+  	</head>
+ 	<body>
+		<header>
+			<a href="/" id="title"><h1>The People's Land of Learning</h1></a>
+			<p>An educational resource for Anti-Colonial Marxist Leninist and Feminist theory.</p>
+			<div id="buttonMenu">
+				<a class="button" href="/pages/dictionary"><p>DICTIONARY</p></a>
+				<a class="button" href="/pages/contact"><p>FEEDBACK</p></a>
+				<a class="button" href="/pages/library/index"><p>LIBRARY</p></a>
+				<a class="button" href="/pages/resources/index"><p>RESOURCES</p></a>
+			</div>
+			<hr/>
+		</header>
+		<div class="container">
+      		<p>This guide provides resources on the basics of marxism</p>
+      		<p>Each section shall have at least three resources each when complete, three books, three articles or pamphlets and three videos.</p>
+			<div class="hidden">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Basic Overview <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+     					<p></p>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<ol>
+								<li><h4>Basic Principles of Marxism Leninism</h4>
+     							<p>- Jose Maria Sison, 176 pages.</p>
+								<p><a href="https://foreignlanguages.press/colorful-classics/basic-principles-of-marxism-leninism-a-primer-jose-maria-sison/">Text</a> | Audio Not Available</p></li>
+								<li><h4>Principles of Communism</h4>
+     							<p>- Friedrich Engels, 15 pages.</p>
+								<p><a href="https://archive.org/details/PrinciplesOfCommunism">Text</a> | Audio Not Available</p></li>
+							</ol>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<ol>
+								<li><h4>Explaining stuff about Socialism that confuses you</h4>
+								<p>- Hakim, 13 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=GhRJCe6aGag">Youtube</a></p></li>
+                <li><h4>Kwame Ture - The Principle of Capitalism</h4>
+								<p>- AfroMarxist, 6 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=gAkIwHOSmI4">Youtube</a></p></li>
+                <li><h4>Socialism 101</h4>
+								<p>- Marxist Paul, Playlist.</p>
+								<p><a href "https://www.youtube.com/watch?v=N52bJRe0Gg8&list=PL0J754r0IteXABJntjBg1YuNsn6jItWXQ">Youtube</a></p></li>
+							</ol>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="hidden">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Economic <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+     					<p></p>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>								
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<ol>
+     							<li><h4>Capital, Volume 1</h4>
+     							<p>- Karl Marx and Friedrich Engels, 520 pages.</p>
+     							<p><a href="https://archive.org/details/CapitalVolume1">Text</a> | Audio Not Available</p></li>
+     							<li><h4>Wage Labor and Capital</h4>
+     							<p>- Karl Marx, 68 pages.</p>
+     							<p><a href="https://archive.org/details/wagelaborcapital00marx">Text</a> | Audio Not Available</p></li>
+							</ol>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<ol>
+								<li><h4>Karl Marx - Das Kapital (Summary)</h4>
+								<p>- Chapter by Chapter, Playlist.</p>
+								<p><a href "https://www.youtube.com/watch?v=yxDpF3XqpV4&list=PLUVllNXk1GCpkzSmJHCSXqJE9JGIfS1dU">Youtube</a></p></li>
+								<li><h4>Why Capitalism Will Always Fail</h4>
+								<p>- Hakim, 10 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=SEGGvVinUao">Youtube</a></p></li>
+								<li><h4>The Fundamentals of Marxian Economics</h4>
+								<p>- Center For Popular Economics, 8 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=Qke6FcIvfhU">Youtube</a></p></li>
+							</ol>
+						</div>
+					</div>
+				</div>
+			</div>
+				<div class="hidden">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Historical <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+     					<p></p>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<ol>
+     							<li><h4>Critique of the Gotha Program</h4>
+     							<p>- Karl Marx and Friedrich Engels, 509 pages.</p>
+     							<p><a href="https://archive.org/details/in.ernet.dli.2015.131494">Text</a> | Audio Not Available</p></li>
+     							<li><h4>Socialism: Utopian and Scientific</h4>
+     							<p>- Friedrich Engels, 135 pages.</p>
+     							<p><a href="https://archive.org/details/socialismutopia00engegoog/page/n6/mode/2up">Text</a> | Audio Not Available</p></li>
+							</ol>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<ol>
+								<li><h4>Historical Materialism Explained</h4>
+								<p>- Halim Alrah, 14 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=lVWwwfcQ5FA">Youtube</a></p></li>
+								<li><h4>Marxism 101: The Base and the Superstructure</h4>
+								<p>- The Forge News, 7 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=iDeZpx3cnU4">Youtube</a></p></li>
+								<li><h4>Karl Marx and Conflict Theory: Crash Course Sociology</h4>
+								<p>- Crash Course, 11 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=gR3igiwaeyc">Youtube</a></p></li>
+							</ol>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="hidden">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Philosophical <span class="hiddenIcon">▸</span></h2>
+				<div class="hiddenBody">
+     					<p></p>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<p>Nothing so far! Please suggest resources if you have any.</p>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<ol>
+     							<li><h4>What is Dialectical Materialism?</h4>
+     							<p>- O. Yakhot, 230 pages.</p>
+     							<p><a href="https://archive.org/details/WhatIsDialecticalMaterialismO.Yakhot">Text</a> | Audio Not Available</p></li>
+     							<li><h4>A Textbook of Marxist Theory</h4>
+     							<p>- Mikhail Shirokov, 383 pages.</p>
+     					    <p><a href="https://archive.org/details/ShirokovM.ATextbookOfMarxistPhilosophy/mode/2up?ui=embed&wrapper=false">Text</a> | Audio Not Available</p></li>
+							    <li><h4>On Dialectical Materialism</h4>
+     							<p>- Karl Marx, Friedrich Engels, Vladimir Lenin, 415 pages.</p>
+     							<p><a href="https://archive.org/details/DialecticalMaterialismMarxEngelsLenin/mode/2up">Text</a> | Audio Not Available</p></li>
+              </ol>
+						</div>
+					</div>
+					<div class="hidden">
+						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Videos <span class="hiddenIcon">▸</span></h2>
+						<div class="hiddenBody">
+							<ol>
+								<li><h4>How To Think Like a Vietnamese Communist: An Intro to Dialectical Materialism!</h4>
+								<p>- Luna Oi, 41 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=neI-ol2AowM">Youtube</a></p></li>
+								<li><h4>Demystifying Marx: What is Dialetical Materialism?</h4>
+								<p>- Leaflets, 5 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=hYNOrTE2BdQ">Youtube</a></p></li>
+								<li><h4>Fundamentals of Marx: Dialectics</h4>
+								<p>- The Marxist Project, 12 minutes.</p>
+								<p><a href "https://www.youtube.com/watch?v=GNHzVeC7jeY">Youtube</a></p></li>
+							</ol>
+						</div>
+					</div>
+				</div>
+			</div>
+		<footer>
+			<hr/>
+			<h4>Contacts</h4>
+			<p>Discord server: <a href="https://discord.gg/hQ3XxjrfmF">https://discord.gg/hQ3XxjrfmF</a></p>
+			<p>Email address: <a href="mailto:serious_bee@protonmail.com">serious_bee@protonmail.com</a></p>
+		</footer>
+  	</body>
+</html>
