fix some typos and metadata in the guides

--- a/pages/guides/base_theory.html
+++ b/pages/guides/base_theory.html
@@ -7,7 +7,7 @@
 		<title>Foundational Marxism</title>
 		<meta content="The People's Land of Learning" property="og:title"/>
 		<meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
-		<meta content="https://peopleslandoflearning.github.io/pages/resources/orgs" property="og:url"/>
+		<meta content="https://peopleslandoflearning.github.io/pages/guides/base_theory" property="og:url"/>
 		<meta content="/assets/icon.png" property="og:image"/>
 		<meta content="#ab5675" data-react-helmet="true" name="theme-color"/>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
@@ -26,7 +26,7 @@
 			<hr/>
 		</header>
 		<div class="container">
-      		<p>This guide provides resources on the basics of marxism</p>
+      		<p>This guide provides resources on the basics of Marxism.</p>
       		<p>Each section shall have at least three resources each when complete, three books, three articles or pamphlets and three videos.</p>
 			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Basic Overview <span class="hiddenIcon">▸</span></h2>
