--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -7,7 +7,7 @@
 		<title>Colonialism and Imperialism</title>
 		<meta content="The People's Land of Learning" property="og:title"/>
 		<meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
-		<meta content="https://peopleslandoflearning.github.io/pages/resources/orgs" property="og:url"/>
+		<meta content="https://peopleslandoflearning.github.io/pages/colonialism" property="og:url"/>
 		<meta content="/assets/icon.png" property="og:image"/>
 		<meta content="#ab5675" data-react-helmet="true" name="theme-color"/>
 		<link href="/style.css" rel="stylesheet" type="text/css" media="all">
