--- a/pages/guides/feminism_gender.html
+++ b/pages/guides/feminism_gender.html
@@ -7,7 +7,7 @@
         <title>Feminism and Gender</title>
         <meta content="The People's Land of Learning" property="og:title"/>
         <meta content="An educational resource for Anti-Colonial Marxist Leninist and Feminist theory" property="og:description"/>
-        <meta content="https://peopleslandoflearning.github.io/pages/resources/orgs" property="og:url"/>
+        <meta content="https://peopleslandoflearning.github.io/pages/guides/feminism_gender" property="og:url"/>
         <meta content="/assets/icon.png" property="og:image"/>
         <meta content="#ab5675" data-react-helmet="true" name="theme-color"/>
         <link href="/style.css" rel="stylesheet" type="text/css" media="all">
@@ -26,7 +26,7 @@
 			<hr/>
 		</header>
 		<div class="container">
-		<p>This Guide covers the topics of patriarchy, gender and queerness from a marxist framework.</p>
+		<p>This Guide covers the topics of patriarchy, gender and queerness from a Marxist framework.</p>
 		<p>Each section shall have at least three resources each when complete, three books, three articles or pamphlets and three videos.</p>
 		<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Feminism Overview <span class="hiddenIcon">▸</span></h2>
