fixed structure of some of the guides

--- a/pages/guides/base_theory.html
+++ b/pages/guides/base_theory.html
@@ -31,7 +31,6 @@
 			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Basic Overview <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -72,7 +71,6 @@
 			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Economic <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -113,7 +111,6 @@
 				<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Historical <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -154,7 +151,6 @@
 			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Philosophical <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -174,7 +170,7 @@
 							    <li><h4>On Dialectical Materialism</h4>
      							<p>- Karl Marx, Friedrich Engels, Vladimir Lenin, 415 pages.</p>
      							<p><a href="https://archive.org/details/DialecticalMaterialismMarxEngelsLenin/mode/2up">Text</a> | Audio Not Available</p></li>
-              </ol>
+							</ol>
 						</div>
 					</div>
 					<div class="hidden">
@@ -195,6 +191,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 		<footer>
 			<hr/>
 			<h4>Contacts</h4>
