--- a/pages/guides/colonialism.html
+++ b/pages/guides/colonialism.html
@@ -43,7 +43,6 @@
 			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Colonialism <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -81,7 +80,6 @@
 			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Imperialism <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -130,7 +128,6 @@
 				<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Indigeneity <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -154,7 +151,6 @@
 			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Nationhood <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -185,7 +181,6 @@
 			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Settler Colonialism <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -213,6 +208,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 		<footer>
 			<hr/>
 			<h4>Contacts</h4>
