--- a/pages/guides/feminism_gender.html
+++ b/pages/guides/feminism_gender.html
@@ -26,12 +26,11 @@
 			<hr/>
 		</header>
 		<div class="container">
-		<p>This Guide covers the topics of patriarchy, gender and queerness from a Marxist framework.</p>
-		<p>Each section shall have at least three resources each when complete, three books, three articles or pamphlets and three videos.</p>
-		<div class="hidden">
+			<p>This Guide covers the topics of patriarchy, gender and queerness from a Marxist framework.</p>
+			<p>Each section shall have at least three resources each when complete, three books, three articles or pamphlets and three videos.</p>
+			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Feminism Overview <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -43,10 +42,10 @@
 						<div class="hiddenBody">
 							<ol>
 								<li><h4>Philosophical Trends in the Feminist Movement</h4>
-     							<p>- Anuradha Ghandy, 112 pages.</p>
+								<p>- Anuradha Ghandy, 112 pages.</p>
 								<p><a href="https://www.marxists.org/archive/gandhy/2006/philosophical-trends-in-feminist-movement-2nd-printing.pdf">Text</a> | Audio Not Available</p></li>
 								<li><h4>Women Race and Class</h4>
-     							<p>- Angela Davis, 166 pages.</p>
+								<p>- Angela Davis, 166 pages.</p>
 								<p><a href="https://archive.org/details/WomenRaceClassAngelaDavis">Text</a> | Audio Not Available</p></li>
 							</ol>
 						</div>
@@ -62,10 +61,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="hidden">
+			</div>
+			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Gender <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -85,10 +84,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="hidden">
+			</div>
+			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Patriarchy <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -108,9 +107,10 @@
 						</div>
 					</div>
 				</div>
-<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Queerness <span class="hiddenIcon">▸</span></h2>
+			</div>
+			<div class="hidden">
+				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Queerness <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
-     					<p></p>
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
@@ -122,7 +122,7 @@
 						<div class="hiddenBody">
 							<ol>
 								<li><h4>Trans Liberation: Beyond Pink or Blue</h4>
-     							<p>- Leslie Feinberg, 168 pages.</p>
+								<p>- Leslie Feinberg, 168 pages.</p>
 								<p><a href="https://archive.org/details/transliberationb0000fein">Text</a> | Audio Not Available</p></li>
 							</ol>
 						</div>
@@ -139,5 +139,12 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<footer>
+			<hr/>
+			<h4>Contacts</h4>
+			<p>Discord server: <a href="https://discord.gg/hQ3XxjrfmF">https://discord.gg/hQ3XxjrfmF</a></p>
+			<p>Email address: <a href="mailto:serious_bee@protonmail.com">serious_bee@protonmail.com</a></p>
+		</footer>
     </body>
 </html>
