--- a/pages/guides/feminism_gender.html
+++ b/pages/guides/feminism_gender.html
@@ -26,8 +26,7 @@
 			<hr/>
 		</header>
 		<div class="container">
-			<p>This Guide covers the topics of patriarchy, gender and queerness from a Marxist framework.</p>
-			<p>Each section shall have at least three resources each when complete, three books, three articles or pamphlets and three videos.</p>
+			<p>In attempting to understand homophobia, transphobia, the patriarchy and other topics and issues related to gender, it is important to apply a dialectical materialist methodology, as explained by our basic theory guide. Asking questions like "if things were not always this way, what material and social conditions led to our current situation?" seems like a very good place to start. If you have any questions or criticisms left unanswered by the resources in this guide, please do not feel afraid to contact us and ask about it!</p>
 			<div class="hidden">
 				<h2 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Feminism Overview <span class="hiddenIcon">▸</span></h2>
 				<div class="hiddenBody">
@@ -47,6 +46,9 @@
 								<li><h4>Women Race and Class</h4>
 								<p>- Angela Davis, 166 pages.</p>
 								<p><a href="https://archive.org/details/WomenRaceClassAngelaDavis">Text</a> | Audio Not Available</p></li>
+								<li><h4>Feminism Without Borders</h4>
+								<p>- Chandra Talpade Mohanty, 311 pages.</p>
+								<p><a href="https://library.memoryoftheworld.org/#/book/846c692f-902e-4b2a-ab67-865b81eb9538">Text</a> | Audio Not Available</p></li>
 							</ol>
 						</div>
 					</div>
@@ -68,7 +70,11 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Articles and Pamphlets <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-							<p>Nothing so far! Please suggest resources if you have any.</p>
+							<ol>
+								<li><h4>The Invention of Women: Making an African Sense of Western Gender Discourses</h4>
+								<p>- Oyèrónkẹ́ Oyěwùmí, 256 pages.</p>
+								<p><a href="https://archive.org/details/oyeronkeoyewumitheinventionofwomenmakinganafricansenseofwesterngenderdiscoursesu/mode/2up?view=theater&ui=embed&wrapper=false">Text</a> | Audio Not Available</p></li>
+							</ol>
 						</div>
 					</div>
 					<div class="hidden">
@@ -97,7 +103,11 @@
 					<div class="hidden">
 						<h3 class="hiddenHead" onClick="toggleHidden(this.nextElementSibling)">Books <span class="hiddenIcon">▸</span></h2>
 						<div class="hiddenBody">
-							<p>Nothing so far! Please suggest resources if you have any.</p>
+							<ol>
+								<li><h4>The Origins of The Family, Private Property and the State</h4>
+								<p>- Friedrich Engels, 220 pages.</p>
+								<p><a href="https://archive.org/details/in.ernet.dli.2015.46641/mode/2up">Text</a> | Audio Not Available</p></li>
+							</ol>
 						</div>
 					</div>
 					<div class="hidden">
