--- a/pages/guides/base_theory.html
+++ b/pages/guides/base_theory.html
@@ -96,13 +96,13 @@
 							<ol>
 								<li><h4>Karl Marx - Das Kapital (Summary)</h4>
 								<p>- Chapter by Chapter, Playlist.</p>
-								<p><a href "https://www.youtube.com/watch?v=yxDpF3XqpV4&list=PLUVllNXk1GCpkzSmJHCSXqJE9JGIfS1dU">Youtube</a></p></li>
+								<p><a href ="https://www.youtube.com/watch?v=yxDpF3XqpV4&list=PLUVllNXk1GCpkzSmJHCSXqJE9JGIfS1dU">Youtube</a></p></li>
 								<li><h4>Why Capitalism Will Always Fail</h4>
 								<p>- Hakim, 10 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=SEGGvVinUao">Youtube</a></p></li>
+								<p><a href ="https://www.youtube.com/watch?v=SEGGvVinUao">Youtube</a></p></li>
 								<li><h4>The Fundamentals of Marxian Economics</h4>
 								<p>- Center For Popular Economics, 8 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=Qke6FcIvfhU">Youtube</a></p></li>
+								<p><a href ="https://www.youtube.com/watch?v=Qke6FcIvfhU">Youtube</a></p></li>
 							</ol>
 						</div>
 					</div>
@@ -136,13 +136,13 @@
 							<ol>
 								<li><h4>Historical Materialism Explained</h4>
 								<p>- Halim Alrah, 14 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=lVWwwfcQ5FA">Youtube</a></p></li>
+								<p><a href ="https://www.youtube.com/watch?v=lVWwwfcQ5FA">Youtube</a></p></li>
 								<li><h4>Marxism 101: The Base and the Superstructure</h4>
 								<p>- The Forge News, 7 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=iDeZpx3cnU4">Youtube</a></p></li>
+								<p><a href ="https://www.youtube.com/watch?v=iDeZpx3cnU4">Youtube</a></p></li>
 								<li><h4>Karl Marx and Conflict Theory: Crash Course Sociology</h4>
 								<p>- Crash Course, 11 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=gR3igiwaeyc">Youtube</a></p></li>
+								<p><a href ="https://www.youtube.com/watch?v=gR3igiwaeyc">Youtube</a></p></li>
 							</ol>
 						</div>
 					</div>
@@ -179,13 +179,13 @@
 							<ol>
 								<li><h4>How To Think Like a Vietnamese Communist: An Intro to Dialectical Materialism!</h4>
 								<p>- Luna Oi, 41 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=neI-ol2AowM">Youtube</a></p></li>
+								<p><a href ="https://www.youtube.com/watch?v=neI-ol2AowM">Youtube</a></p></li>
 								<li><h4>Demystifying Marx: What is Dialetical Materialism?</h4>
 								<p>- Leaflets, 5 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=hYNOrTE2BdQ">Youtube</a></p></li>
+								<p><a href ="https://www.youtube.com/watch?v=hYNOrTE2BdQ">Youtube</a></p></li>
 								<li><h4>Fundamentals of Marx: Dialectics</h4>
 								<p>- The Marxist Project, 12 minutes.</p>
-								<p><a href "https://www.youtube.com/watch?v=GNHzVeC7jeY">Youtube</a></p></li>
+								<p><a href ="https://www.youtube.com/watch?v=GNHzVeC7jeY">Youtube</a></p></li>
 							</ol>
 						</div>
 					</div>
